--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "optionalDependencies": {
     "ipx": "1.0.0-2"
   },
+  "packageManager": "pnpm@8.0.0",
   "engines": {
     "node": "^14.16.0 || ^16.11.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   }
