--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript": "5.0.3"
   },
   "optionalDependencies": {
-    "ipx": "1.0.0-2"
+    "ipx": "^1.0.0"
   },
   "packageManager": "pnpm@8.0.0",
   "engines": {
