--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxt/image",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.0",
   "description": "Nuxt Image Module",
   "repository": "nuxt/image",
   "license": "MIT",
@@ -20,7 +20,8 @@
     "docs:dev": "pnpm nuxt dev docs",
     "lint": "eslint --ext .ts --ext .vue .",
     "prepack": "pnpm build",
-    "release": "pnpm test && standard-version && git push --follow-tags && npm publish",
+    "release": "pnpm run prerelease",
+    "prerelease": "pnpm test && changelogen --release --prerelease=rc --push && npm publish",
     "test": "pnpm lint"
   },
   "dependencies": {
@@ -38,10 +39,10 @@
     "@nuxt/module-builder": "0.2.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18.15.11",
+    "changelogen": "^0.5.2",
     "eslint": "8.37.0",
     "jiti": "1.18.2",
     "nuxt": "^3.3.2",
-    "standard-version": "latest",
     "typescript": "5.0.3"
   },
   "optionalDependencies": {
